update to dashboard

--- a/dashboard/testing/src/css/style.css
+++ b/dashboard/testing/src/css/style.css
@@ -132,8 +132,9 @@ text {
     height: 100%;
     overflow: hidden;
     background-color: #333;
-    /* You'll need to mess with this a bit to get your camera to work. 
-    Replace the url with a live-updating image feed from your camera. Using other camera streaming systems will require some tweaking. */
+    /* You'll need to mess with this a bit to get your camera to work. Replace the url with a live-updating image feed from your camera. Using other camera streaming systems will require some tweaking. 
+    background-image: url('hp://roboRIO-967-FRC.local:1181/?action=stream');
+    background-repeat: no-repeat; */
 }
 
 #robot-diagram {
@@ -186,14 +187,6 @@ text {
 hr { margin-bottom: 15px; }
 
 h1, h2, h3 { margin: 10px 0px; }
-
-meter {
-    width: 100%;
-    background-color: red;
-    -webkit-text-fill-color: red;
-}
-
-
 
 /* login thingy css */
 #login {
