--- a/dashboard/src/css/style.css
+++ b/dashboard/src/css/style.css
@@ -3,13 +3,9 @@
     margin: 0;
     padding: 0;
 }
-
-html { height: 100%; }
-
 ::-webkit-scrollbar {
     display: none;
 }
-
 body {
     font: 16px sans-serif;
     -webkit-user-select: none;
@@ -18,184 +14,128 @@ body {
     user-select: none;
     color: white;
     overflow: hidden;
-    background: #111;
-    height: 99%;
-    width: 100%;
+    background: #222;
 }
-
-.full {
-    width: 100%;
-    display: block;
-}
-
-header {
-    height: 30%;
-    border-bottom: 2px solid #ccc;
-    /* background-color: blue; /* USE FOR DEBUGGING */
-}
-
-main {
-    height: 70%;
-    /* background-color: red; /* USE FOR DEBUGGING */
-}
-
-.col {
-    display: inline-block;
-    /* border: 1px solid white; /* USE FOR DEBUGGING */
-    height: 100%;
-
-    /* DO NOT mess with that 49.75 */
-    /* IT IS THERE FOR A REASON... */
-    width: 49.5%;
-    padding: 10px;
-    vertical-align: middle;
-}
-
-.parent-col {
-    display: inline-block;
-    height: 100%;
-
-    /* DO NOT mess with that 49.75 */
-    /* IT IS THERE FOR A REASON... */
-    width: 49.5%;
-    vertical-align: middle;
-}
-
-#timer {
-    display: block;
-    color: gold;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 10em;
-    height: 100%;
-    border: 2px solid goldenrod;
-    border-radius: 10px;
-}
-
-button, input[type="text"], input[type="number"], .select-container, select, option {
+button, input[type="text"], input[type="number"], .select-container, select {
     color: white;
-    background-color: #444;
+    background: #444;
     border: none;
     font-size: 14px;
     padding: 6px 8px;
     cursor: pointer;
     outline: 0;
-    padding: 5px;
 }
-
 .select-container {
-    padding: 5px 15px;;
+    padding: 0;
     display: inline-block;
 }
-
 select {
     border: none;
     background: none;
     color: white;
     height: 25px;
 }
-
+input[type="text"], input[type="number"] {
+    cursor: text;
+}
+input[type="checkbox"] {
+    -webkit-filter: saturate(0);
+    filter: saturate(0);
+}
+/* Major interface panes, aside, article, header, etc. */
+body > * {
+    padding: 10px;
+    position: fixed;
+    overflow: scroll;
+    background: #222;
+}
+#timer {
+    font-family: monospace;
+    display: block;
+    height: 20vh;
+    width: 30vw;
+    top: 0;
+    left: 0;
+    font-size: 20vh;
+    line-height: .8;
+}
+header {
+    width: 20vw;
+    height: 20vh;
+    top: 0;
+    left: 30vw;
+    color: white;
+}
+#camera {
+    padding: 0;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 50vw;
+    height: 80vh;
+    overflow: hidden;
+    background-color: #333;
+    /* You'll need to mess with this a bit to get your camera to work. Replace the url with a live-updating image feed from your camera. Using other camera streaming systems will require some tweaking. */
+    /*background-image: url('LINK TO CAMERA SOURCE HERE');*/
+}
+article {
+    top: 0;
+    left: 50vw;
+    height: 100vh;
+    width: 35vw;
+}
 svg * {
+    stroke: white;
+    fill: #222;
+    stroke-width: 2;
     -webkit-transform-origin: center;
     -ms-transform-origin: center;
     transform-origin: center;
-    stroke-width: 2;
 }
-
 text {
     font-size: 16px;
     letter-spacing: 2px;
     stroke: none;
     fill: white;
 }
-
 #gyro {
-    stroke: white;
-    fill: #111;
-    width: 100%;
-    height: 100%;
+    width: 175px;
+    height: 175px;
+    margin-left: 30px;
+    margin-top: 15px;
 }
-
 #gyro-arm {
-    stroke: gold;
     -webkit-transform-origin: bottom;
     -ms-transform-origin: bottom;
     transform-origin: bottom;
 }
-
 #gyro-number {
     font-size: 25px;
     text-anchor: middle;
 }
-
-#camera {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    background-color: #333;
-    /* You'll need to mess with this a bit to get your camera to work. 
-    Replace the url with a live-updating image feed from your camera. Using other camera streaming systems will require some tweaking. */
-}
-
 #robot-diagram {
-    stroke: white;
-    fill: #222;
+    position: absolute;
+    bottom: 1px;
+    right: 1vw;
 }
-
+#robot-arm {
+    -webkit-transform-origin: right;
+    -ms-transform-origin: right;
+    transform-origin: right;
+}
 #team {
-    font-size: 32px;
-    fill: rgb(255, 46, 46);
+    font-size: 28px;
     letter-spacing: -1px;
 }
-
-#status-bar {
-    border: 2px solid #ccc;
-    border-right: 0px;
-    border-radius: 10px 0px 0px 10px;
-    padding-left: 10px;
-    height: 100%;
+aside {
+    right: 0;
+    top: 0;
+    width: 15vw;
+    height: 100vh;
 }
-
-.center-align {
-    text-align: center;
+aside > * {
+    margin-bottom: 20px;
 }
-
-.right-align {
-    text-align: right;
-}
-
-.label {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: rgb(255, 46, 46);
-    font-size: 1.6em;
-    margin-left: 25px;
-    display: inline;
-}
-
-.label-block {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: rgb(255, 46, 46);
-    font-size: 1.7em;
-    margin-bottom: 5px;
-    display: block;
-}
-
-.readout { font-size: 1.5em; }
-
-.superbig { font-size: 3em; }
-
-hr { margin-bottom: 15px; }
-
-h1, h2, h3 { margin: 10px 0px; }
-
-meter {
-    width: 100%;
-    background-color: red;
-    -webkit-text-fill-color: red;
-}
-
-
-
-/* login thingy css */
 #login {
     position: fixed;
     display: none;
